Silence startup message

--- a/vignettes/CoalescingCutoffs.Rmd
+++ b/vignettes/CoalescingCutoffs.Rmd
@@ -36,7 +36,7 @@ which is fully documented at: <https://oist.github.io/GenomicBreaks>.
 library('OikScrambling') |> suppressPackageStartupMessages()
 library('ggplot2')
 library('pheatmap')
-library('viridis')
+library('viridis') |> suppressPackageStartupMessages()
 (genomes <- OikScrambling:::loadAllGenomes())
 (load("BreakPoints.Rdata"))
 ```
