--- a/vignettes/CoalescingCutoffs.Rmd
+++ b/vignettes/CoalescingCutoffs.Rmd
@@ -42,7 +42,7 @@ library('viridis') |> suppressPackageStartupMessages()
 ```
 ### Generating coalesced alignments
 
-The function `coalest_contigs()` is the primary driver of our synteny analysis. It accepts an argument, `minwidth`, which controls the minimum width of segments to be considered for synteny analyses.
+The function `coalesce_contigs()` is the primary driver of our synteny analysis. It accepts an argument, `minwidth`, which controls the minimum width of segments to be considered for synteny analyses.
 
 In the next session, I calculate these alignments at a large number of minimum width cutoffs. 
 
